packagekit: Add support for new action info enum values

BUG: 488219